[gd_scene load_steps=2 format=3 uid="uid://cmv5fngyp48qt"]

[ext_resource type="Script" uid="uid://byon1702cnk5g" path="res://Scripts/premainscript.gd" id="1_4fwbt"]

[node name="PreMainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fwbt")

[node name="DownloadUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DownloadUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DownloadButton1" type="Button" parent="DownloadUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.180078
anchor_bottom = 0.181944
theme_override_font_sizes/font_size = 76
text = "Download MetaData & Scraper Info (>25mb)"
metadata/_edit_use_anchors_ = true

[node name="DownloadButton2" type="Button" parent="DownloadUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.181944
anchor_right = 0.297656
anchor_bottom = 0.363889
theme_override_font_sizes/font_size = 76
text = "Download Covers (500MB - 1GB)"
metadata/_edit_use_anchors_ = true

[node name="FolderButton" type="Button" parent="DownloadUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.363889
anchor_right = 0.460938
anchor_bottom = 0.545833
theme_override_font_sizes/font_size = 76
text = "Open User Folder"
metadata/_edit_use_anchors_ = true

[node name="SkipButton" type="Button" parent="DownloadUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286719
anchor_top = 0.811806
anchor_right = 0.747656
anchor_bottom = 0.99375
theme_override_font_sizes/font_size = 76
text = "Skip / Continue"
metadata/_edit_use_anchors_ = true

[node name="ProgressBar1" type="ProgressBar" parent="DownloadUI"]
layout_mode = 0
offset_left = 1666.0
offset_top = 66.0
offset_right = 2348.0
offset_bottom = 175.0

[node name="ProgressBar2" type="ProgressBar" parent="DownloadUI"]
layout_mode = 0
offset_left = 1245.0
offset_top = 345.0
offset_right = 1927.0
offset_bottom = 454.0

[node name="HTTPRequest" type="HTTPRequest" parent="DownloadUI"]
use_threads = true
timeout = 10.0

[node name="DownloadStatusLabel" type="Label" parent="DownloadUI"]
layout_mode = 0
offset_left = 223.0
offset_top = 1035.0
offset_right = 1373.0
offset_bottom = 1155.0
theme_override_font_sizes/font_size = 56
text = "Info Text"

[node name="helpertext" type="Label" parent="DownloadUI"]
layout_mode = 0
offset_left = 1180.0
offset_top = 524.0
offset_right = 2330.0
offset_bottom = 644.0
theme_override_font_sizes/font_size = 56
text = "Place novelpia_covers folder into folder"

[connection signal="pressed" from="DownloadUI/DownloadButton1" to="." method="_on_download_1_pressed"]
[connection signal="pressed" from="DownloadUI/DownloadButton2" to="." method="_on_download_2_pressed"]
[connection signal="pressed" from="DownloadUI/FolderButton" to="." method="_on_folder_button_pressed"]
[connection signal="pressed" from="DownloadUI/SkipButton" to="." method="_on_skip_pressed"]
